apps/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-app
  labels:
    app: course-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: course-app
